--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,18 @@
             min-height: 100%;
             display: inline-block;
         }
+
+        .error {
+            width: 100%;
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            background: rgba(255, 0, 0, 0.388);
+            line-height: 2;
+            padding-left: 1em;
+            font-weight: bold;
+            font-size: 1.3em;
+        }
     </style>
 </body>
 </html>
